--- a/JustTix/css/login2.css
+++ b/JustTix/css/login2.css
@@ -46,7 +46,7 @@ h1{
 	margin-bottom: 20px;
 }
 
-.loginbox input[type="text"], input[type="password"]{
+.loginbox input[type="text"], input[type="password"], input[type="email"]{
 	border: none;
 	border-bottom: 1px solid #fff;
 	background: transparent;
